Added Database ver. 1

--- a/.env.example
+++ b/.env.example
@@ -23,7 +23,7 @@ LOG_LEVEL=debug
 DB_CONNECTION=pgsql
 DB_HOST=127.0.0.1
 DB_PORT=5432
-DB_DATABASE=example_app
+DB_DATABASE=dungeon_goodies_db
 DB_USERNAME=root
 DB_PASSWORD=
 
